--- a/web/templates/portal.html
+++ b/web/templates/portal.html
@@ -73,6 +73,10 @@
     </style>
 {% endblock %}
 
+{% block title %}
+    top
+{% endblock %}
+
 {% block page_desc %}
     以下の内容を上から順に入力してください。
 {% endblock %}
