change image path

--- a/web/templates/application.html
+++ b/web/templates/application.html
@@ -72,7 +72,7 @@
 </head>
 <body>
 <header>
-    <img class="main-logo" src="https://hack23.ukwhatn.com/static/logo-white-transparent-w-text.png">
+    <img class="main-logo" src="/static/logo-white-transparent-w-text.png">
     <div class="main-title">
         ユーザ情報登録サイト
     </div>
