ポータルにサークル名を表示

--- a/web/templates/portal.html
+++ b/web/templates/portal.html
@@ -150,6 +150,7 @@
                 </div>
             {% else %}
                 <div class="panel-heading">
+                    <span style="font-size: 0.75em">{{ user.circle_name }}</span><br>
                     {{ user.name_first }} {{ user.name_last }}
                 </div>
                 <div class="panel-body">
